--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <figcaption style="color:#800000;"> - Buy Smart Sell Wise</figcaption>
     </figure>
         <h2>Login</h2>
-        <form action="#" method="post">
+        <form action="https://39cf8002d4b9.ngrok-free.app/Agri-Waste_Trading_Website/HelloServlet" method="post">
             <div class="form-group">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required>
@@ -133,7 +133,7 @@
                     <input type="checkbox" id="rememberMe" name="rememberMe">
                     <label for="rememberMe">Remember me</label>
                 </div><br>
-                <a href="#">Forgot password?</a>
+                <a href="https://39cf8002d4b9.ngrok-free.app/Agri-Waste_Trading_Website/HelloServlet">Forgot password?</a>
             </div><br>
             <button type="submit" class="login-button">Login</button>
         </form><br>
